--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore the config file that includes cookies and headers
+config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
